fix navbar collapsing

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -8,10 +8,9 @@ body {
 }
 
 .navbar {
-  text-transform: uppercase;
-
   .navbar-brand {
     padding-left: 56px;
+    margin-top: -10px;
     .logo {
       display: block;
       width: 210px;
@@ -22,6 +21,6 @@ body {
 
   .navbar-nav li a {
     font-size: 21pt;
-    padding: 36px 20px 10px 20px;
+    text-transform: uppercase;
   }
 }
