--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -35,3 +35,5 @@
 @navbar-default-link-active-color: @brand-primary;
 @navbar-default-link-color: @text-color;
 @navbar-default-link-hover-color: @text-color;
+@navbar-default-toggle-hover-bg: @brand-primary;
+@navbar-default-toggle-icon-bar-bg: @text-color;
